@@ -19,3 +19,10 @@ specification = ../specification/default.spc
 
 # Enable MultiEdges, this gives a little bit of performance.
 cfa.useMultiEdges = true
+
+[cpa.predicate]
+# Setting the option to make memory allocations always return correct addresses
+memoryAllocationsAlwaysSucceed = true
+
+# New heuristic for cillified files: pre-populate small structures with all their fields
+maxPreFilledAllocationSize = 0
