@@ -1,18 +1,0 @@
-# ----------------------------------------------------------------------
-# This configuration uses predicate analysis with formula encoding based
-# on uninterpreted functions. This allows more precise analysis of
-# pointer anliasing, structure fields, container_of macro and
-# small-sized arrays.
-# Bit-precise analysis is disabled in this configuration.
-# ----------------------------------------------------------------------
-
-#include predicateAnalysis-PredAbsRefiner-ABEl.properties
-
-# An option enabling PathFormulaWithUF, CToFormulaWithUFConverter and appropriate merging policy
-cpa.predicate.pointerAnalysisWithUFs =  true
-
-# Setting the option to make memory allocations always return correct addresses
-cpa.predicate.memoryAllocationsAlwaysSucceed = true
-
-# New heuristic for cillified files: pre-populate small structures with all their fields
-cpa.predicate.maxPreFilledAllocationSize = 0
