@@ -1,8 +1,0 @@
-# ---------------------------------------------------------------
-# This modified ABEl-UF-bitprecise configuration uses abstraction
-# on loops and function calls/returns
-# ---------------------------------------------------------------
-
-#include predicateAnalysis-PredAbsRefiner-ABEl-UF-bitprecise.properties
-
-cpa.predicate.blk.alwaysAtFunctions = true
