@@ -1,8 +1,0 @@
-# ----------------------------------------------------------
-# This modified ABEl-UF configuration uses abstraction
-# on loops and function calls/returns
-# ----------------------------------------------------------
-
-#include predicateAnalysis-PredAbsRefiner-ABEl-UF.properties
-
-cpa.predicate.blk.alwaysAtFunctions = true
