@@ -1,6 +1,7 @@
 Changes since CPAchecker 1.2
 ----------------------------
 
+* r10756: The much improved pointer-alias handling with UFs is now the default in PredicateCPA.
 * r10375: Many options regarding the analysis algorithm (algorithm.* options such as
   analysis.useRefinement and analysis.useCBMC) were renamed.
 * r8454: CPAchecker with PredicateCPA now outputs information when in the error path
